--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="confirmation-screen" class="screen hidden">
     <div class="confirmation-box">
       <div class="user-info">
-        <img src="your-image-url" alt="User Icon" class="user-icon">
+        <img src="2FEF14C9-03CE-49C4-AB2A-31DBF9216E87.jpg" alt="User Icon" class="user-icon">
         <span class="user-name">Brown</span>
       </div>
       <p>Do you want to delete?</p>
