--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div id="deleted-screen" class="screen hidden">
-    <p class="message">Everything has been deleted!</p>
+    <p class="message">Everyone has been deleted.</p>
   </div>
 
   <script src="app.js"></script>
